--- a/src/components/UniverseMap.css
+++ b/src/components/UniverseMap.css
@@ -1,9 +1,16 @@
 /* UniverseMap.css */
-#map-container {
-  width: 100%;
-  height: 100vh; /* Full viewport height */
-  overflow: hidden;
+.map-wrapper {
   position: relative;
+  width: 100%;
+  height: 100vh;
+  /* Full viewport height */
+}
+
+#map-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 #map-container svg {
@@ -101,7 +108,8 @@
   display: flex;
   align-items: center;
   margin-bottom: 5px;
-  width: 100%; /* Ensure full width */
+  width: 100%;
+  /* Ensure full width */
 }
 
 .resource-name {
